[package]
name = "chirp-8"
version = "0.1.0"
authors = ["deathlesz"]
edition = "2021"
description = "A simple CHIP-8 emulator."
readme = "README.md"
license = "MIT or Apache-2.0"
keywords = ["gamedev", "emulator", "chip-8"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
rand = { version = "0.9", default-features = false, features = ["thread_rng"] }
rodio = { version = "0.20", default-features = false }
sdl2 = "0.37"
